# serializer version: 1
# name: test_aggregation_computation_is_reused[session-tracked-async-filter-multiple-aggregations-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_2.water_percent) AS avg_1,
                 sum(fruit_2.sweetness) AS sum_1,
                 fruit_2.color_id AS color_id
            FROM fruit AS fruit_2
           WHERE fruit_2.color_id IS NOT NULL
           GROUP BY fruit_2.color_id
         ) SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.avg_1 > ?
     AND anon_1.sum_1 > ?
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-filter-multiple-aggregations-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_2.water_percent) AS avg_1,
                 sum(fruit_2.sweetness) AS sum_1,
                 fruit_2.color_id AS color_id
            FROM fruit AS fruit_2
           WHERE fruit_2.color_id IS NOT NULL
           GROUP BY fruit_2.color_id
         ) SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.avg_1 > %s
     AND anon_1.sum_1 > %s
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-filter-multiple-aggregations-asyncpg_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_2.water_percent) AS avg_1,
                 sum(fruit_2.sweetness) AS sum_1
            FROM fruit AS fruit_2
           WHERE color.id = fruit_2.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.avg_1 > $1::FLOAT
     AND anon_1.sum_1 > $2::FLOAT
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-filter-multiple-aggregations-psycopg_async_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_2.water_percent) AS avg_1,
                 sum(fruit_2.sweetness) AS sum_1
            FROM fruit AS fruit_2
           WHERE color.id = fruit_2.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.avg_1 > %(param_1)s
     AND anon_1.sum_1 > %(param_2)s
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-filter-order-by-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS count_1,
                 avg(fruit_2.water_percent) AS avg_1,
                 fruit_2.color_id AS color_id
            FROM fruit AS fruit_2
           WHERE fruit_2.color_id IS NOT NULL
           GROUP BY fruit_2.color_id
         ) SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.count_1 > ?
   ORDER BY anon_1.count_1 ASC,
            anon_1.avg_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-filter-order-by-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS count_1,
                 avg(fruit_2.water_percent) AS avg_1,
                 fruit_2.color_id AS color_id
            FROM fruit AS fruit_2
           WHERE fruit_2.color_id IS NOT NULL
           GROUP BY fruit_2.color_id
         ) SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.count_1 > %s
   ORDER BY anon_1.count_1 ASC,
            anon_1.avg_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-filter-order-by-asyncpg_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS count_1,
                 avg(fruit_2.water_percent) AS avg_1
            FROM fruit AS fruit_2
           WHERE color.id = fruit_2.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.count_1 > $1::INTEGER
   ORDER BY anon_1.count_1 ASC,
            anon_1.avg_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-filter-order-by-psycopg_async_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS count_1,
                 avg(fruit_2.water_percent) AS avg_1
            FROM fruit AS fruit_2
           WHERE color.id = fruit_2.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.count_1 > %(param_1)s::INTEGER
   ORDER BY anon_1.count_1 ASC,
            anon_1.avg_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-filter-order-by-same-aggregation-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_2.water_percent) AS avg_1,
                 fruit_2.color_id AS color_id
            FROM fruit AS fruit_2
           WHERE fruit_2.color_id IS NOT NULL
           GROUP BY fruit_2.color_id
         ) SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.avg_1 > ?
   ORDER BY anon_1.avg_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-filter-order-by-same-aggregation-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_2.water_percent) AS avg_1,
                 fruit_2.color_id AS color_id
            FROM fruit AS fruit_2
           WHERE fruit_2.color_id IS NOT NULL
           GROUP BY fruit_2.color_id
         ) SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.avg_1 > %s
   ORDER BY anon_1.avg_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-filter-order-by-same-aggregation-asyncpg_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_2.water_percent) AS avg_1
            FROM fruit AS fruit_2
           WHERE color.id = fruit_2.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.avg_1 > $1::FLOAT
   ORDER BY anon_1.avg_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-filter-order-by-same-aggregation-psycopg_async_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_2.water_percent) AS avg_1
            FROM fruit AS fruit_2
           WHERE color.id = fruit_2.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.avg_1 > %(param_1)s
   ORDER BY anon_1.avg_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-order-by-multiple-aggregations-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_2.water_percent) AS avg_1,
                 sum(fruit_2.sweetness) AS sum_1,
                 fruit_2.color_id AS color_id
            FROM fruit AS fruit_2
           WHERE fruit_2.color_id IS NOT NULL
           GROUP BY fruit_2.color_id
         ) SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY anon_1.avg_1 ASC,
            anon_1.sum_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-order-by-multiple-aggregations-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_2.water_percent) AS avg_1,
                 sum(fruit_2.sweetness) AS sum_1,
                 fruit_2.color_id AS color_id
            FROM fruit AS fruit_2
           WHERE fruit_2.color_id IS NOT NULL
           GROUP BY fruit_2.color_id
         ) SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY anon_1.avg_1 ASC,
            anon_1.sum_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-order-by-multiple-aggregations-asyncpg_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_2.water_percent) AS avg_1,
                 sum(fruit_2.sweetness) AS sum_1
            FROM fruit AS fruit_2
           WHERE color.id = fruit_2.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY anon_1.avg_1 ASC,
            anon_1.sum_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-order-by-multiple-aggregations-psycopg_async_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_2.water_percent) AS avg_1,
                 sum(fruit_2.sweetness) AS sum_1
            FROM fruit AS fruit_2
           WHERE color.id = fruit_2.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY anon_1.avg_1 ASC,
            anon_1.sum_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-output-filter-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.count_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-output-filter-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.count_1
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 > %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-output-filter-asyncpg_engine]
  '''
  SELECT color.id,
         anon_1.count_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 > $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-output-filter-psycopg_async_engine]
  '''
  SELECT color.id,
         anon_1.count_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 > %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-output-multiple-aggregations-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.sweetness) AS max_1,
                 max(fruit_1.water_percent) AS max_2,
                 max(fruit_1.name) AS max_3,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.max_1,
         anon_1.max_2,
         anon_1.max_3
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   ORDER BY color.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-output-multiple-aggregations-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.sweetness) AS max_1,
                 max(fruit_1.water_percent) AS max_2,
                 max(fruit_1.name) AS max_3,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.max_1,
         anon_1.max_2,
         anon_1.max_3
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   ORDER BY color.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-output-multiple-aggregations-asyncpg_engine]
  '''
  SELECT color.id,
         anon_1.max_1,
         anon_1.max_2,
         anon_1.max_3
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.sweetness) AS max_1,
                 max(fruit_1.water_percent) AS max_2,
                 max(fruit_1.name) AS max_3
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   ORDER BY color.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-output-multiple-aggregations-psycopg_async_engine]
  '''
  SELECT color.id,
         anon_1.max_1,
         anon_1.max_2,
         anon_1.max_3
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.sweetness) AS max_1,
                 max(fruit_1.water_percent) AS max_2,
                 max(fruit_1.name) AS max_3
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   ORDER BY color.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-output-order-by-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.count_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   ORDER BY anon_1.count_1 ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-output-order-by-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.count_1
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   ORDER BY anon_1.count_1 ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-output-order-by-asyncpg_engine]
  '''
  SELECT color.id,
         anon_1.count_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   ORDER BY anon_1.count_1 ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-async-output-order-by-psycopg_async_engine]
  '''
  SELECT color.id,
         anon_1.count_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   ORDER BY anon_1.count_1 ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-sync-filter-multiple-aggregations-psycopg_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_2.water_percent) AS avg_1,
                 sum(fruit_2.sweetness) AS sum_1
            FROM fruit AS fruit_2
           WHERE color.id = fruit_2.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.avg_1 > %(param_1)s
     AND anon_1.sum_1 > %(param_2)s
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-sync-filter-multiple-aggregations-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_2.water_percent) AS avg_1,
                 sum(fruit_2.sweetness) AS sum_1,
                 fruit_2.color_id AS color_id
            FROM fruit AS fruit_2
           WHERE fruit_2.color_id IS NOT NULL
           GROUP BY fruit_2.color_id
         ) SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.avg_1 > ?
     AND anon_1.sum_1 > ?
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-sync-filter-order-by-psycopg_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS count_1,
                 avg(fruit_2.water_percent) AS avg_1
            FROM fruit AS fruit_2
           WHERE color.id = fruit_2.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.count_1 > %(param_1)s::INTEGER
   ORDER BY anon_1.count_1 ASC,
            anon_1.avg_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-sync-filter-order-by-same-aggregation-psycopg_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_2.water_percent) AS avg_1
            FROM fruit AS fruit_2
           WHERE color.id = fruit_2.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.avg_1 > %(param_1)s
   ORDER BY anon_1.avg_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-sync-filter-order-by-same-aggregation-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_2.water_percent) AS avg_1,
                 fruit_2.color_id AS color_id
            FROM fruit AS fruit_2
           WHERE fruit_2.color_id IS NOT NULL
           GROUP BY fruit_2.color_id
         ) SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.avg_1 > ?
   ORDER BY anon_1.avg_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-sync-filter-order-by-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS count_1,
                 avg(fruit_2.water_percent) AS avg_1,
                 fruit_2.color_id AS color_id
            FROM fruit AS fruit_2
           WHERE fruit_2.color_id IS NOT NULL
           GROUP BY fruit_2.color_id
         ) SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE anon_1.count_1 > ?
   ORDER BY anon_1.count_1 ASC,
            anon_1.avg_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-sync-order-by-multiple-aggregations-psycopg_engine]
  '''
  SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_2.water_percent) AS avg_1,
                 sum(fruit_2.sweetness) AS sum_1
            FROM fruit AS fruit_2
           WHERE color.id = fruit_2.color_id
         ) AS anon_1
      ON TRUE
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY anon_1.avg_1 ASC,
            anon_1.sum_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-sync-order-by-multiple-aggregations-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_2.water_percent) AS avg_1,
                 sum(fruit_2.sweetness) AS sum_1,
                 fruit_2.color_id AS color_id
            FROM fruit AS fruit_2
           WHERE fruit_2.color_id IS NOT NULL
           GROUP BY fruit_2.color_id
         ) SELECT fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY anon_1.avg_1 ASC,
            anon_1.sum_1 ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-sync-output-filter-psycopg_engine]
  '''
  SELECT color.id,
         anon_1.count_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 > %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-sync-output-filter-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.count_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-sync-output-multiple-aggregations-psycopg_engine]
  '''
  SELECT color.id,
         anon_1.max_1,
         anon_1.max_2,
         anon_1.max_3
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.sweetness) AS max_1,
                 max(fruit_1.water_percent) AS max_2,
                 max(fruit_1.name) AS max_3
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   ORDER BY color.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-sync-output-multiple-aggregations-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.sweetness) AS max_1,
                 max(fruit_1.water_percent) AS max_2,
                 max(fruit_1.name) AS max_3,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.max_1,
         anon_1.max_2,
         anon_1.max_3
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   ORDER BY color.id ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-sync-output-order-by-psycopg_engine]
  '''
  SELECT color.id,
         anon_1.count_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   ORDER BY anon_1.count_1 ASC
  '''
# ---
# name: test_aggregation_computation_is_reused[session-tracked-sync-output-order-by-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.count_1
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   ORDER BY anon_1.count_1 ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-async-inner-join-rewrite-aiosqlite_engine]
  '''
  SELECT fruit_1.sweetness,
         fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE fruit_1.sweetness > ?
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-async-inner-join-rewrite-asyncmy_engine]
  '''
  SELECT fruit_1.sweetness,
         fruit_1.id,
         color.id AS id_1
    FROM color AS color
   INNER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE fruit_1.sweetness > %s
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-async-inner-join-rewrite-asyncpg_engine]
  '''
  SELECT fruit_1.sweetness,
         fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE fruit_1.sweetness > $1::INTEGER
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-async-inner-join-rewrite-psycopg_async_engine]
  '''
  SELECT fruit_1.sweetness,
         fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE fruit_1.sweetness > %(sweetness_1)s::INTEGER
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-async-no-inner-join-rewrite-aiosqlite_engine]
  '''
  SELECT fruit_1.sweetness,
         fruit_1.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE color.created_at > ?
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-async-no-inner-join-rewrite-asyncmy_engine]
  '''
  SELECT fruit_1.sweetness,
         fruit_1.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE color.created_at > %s
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-async-no-inner-join-rewrite-asyncpg_engine]
  '''
  SELECT fruit_1.sweetness,
         fruit_1.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE color.created_at > $1::TIMESTAMP WITHOUT TIME
    ZONE
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-async-no-inner-join-rewrite-psycopg_async_engine]
  '''
  SELECT fruit_1.sweetness,
         fruit_1.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE color.created_at > %(created_at_1)s::TIMESTAMP WITHOUT TIME
    ZONE
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-sync-inner-join-rewrite-psycopg_engine]
  '''
  SELECT fruit_1.sweetness,
         fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE fruit_1.sweetness > %(sweetness_1)s::INTEGER
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-sync-inner-join-rewrite-sqlite_engine]
  '''
  SELECT fruit_1.sweetness,
         fruit_1.id,
         color.id AS id_1
    FROM color AS color
    JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE fruit_1.sweetness > ?
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-sync-no-inner-join-rewrite-psycopg_engine]
  '''
  SELECT fruit_1.sweetness,
         fruit_1.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE color.created_at > %(created_at_1)s::TIMESTAMP WITHOUT TIME
    ZONE
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-sync-no-inner-join-rewrite-sqlite_engine]
  '''
  SELECT fruit_1.sweetness,
         fruit_1.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   WHERE color.created_at > ?
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
